objects/icAgentConsole__incPresenceStatusMapping__c.object
<CustomObject>
    <fields>
        <fullName>icAgentConsole__inContactStatus__c</fullName>
        <defaultValue>&quot;STRING&quot;</defaultValue>
        <description>inContact Status of Omni Channel Presence Mapping</description>
        <label>inContactStatus</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__incAgentSettings__c</fullName>
        <label>Agent Settings</label>
        <referenceTo>icAgentConsole__incAgentConfiguration__c</referenceTo>
        <relationshipLabel>OmniChannel Presence Mappings</relationshipLabel>
        <relationshipName>OmniChannel_Presence_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__salesforceStatus__c</fullName>
        <defaultValue>&quot;STRING&quot;</defaultValue>
        <description>Salesforce Status of Omni Channel Presence Mapping</description>
        <label>salesforceStatus</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>OmniChannel Presence Mapping</label>
    <nameField>
        <label>Presence Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OmniChannel Presence Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>